# psychopy_phoneme

./: .gitignore  LICENSE  README.md  Speech_on_the_Brain_stimuli_tracking.xlsx  pyproject.toml
src/phoneme_psychopy/: __init__.py  audio_playback.py  audio_preprocess.py  audio_recorder.py  config.py  io_utils.py  logger.py  main.py  models.py  schedule_loader.py  session_builder.py  stimulus_registry.py  trial_runner.py  ui.py
stimuli/mixed/: manifest.csv
tests/: test_audio_playback.py  test_audio_preprocess.py  test_resume.py  test_schedule_loader.py  test_session_builder.py  test_stimulus_registry.py  test_trial_runner.py  test_ui.py
