[project]
name = "psychopy-phoneme"
version = "0.1.0"
description = "PsychoPy scaffold for phoneme perception experiments with configurable noise sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "miniaudio>=1.61",
  "numpy>=2.3.3",
  "openpyxl>=3.1.5",
  "pandas>=2.3.2",
  "sounddevice>=0.5.5",
  "soundfile>=0.13.1",
]

[project.optional-dependencies]
psychopy = [
  "psychopy>=2024.2",
]

[project.scripts]
phoneme-psychopy = "phoneme_psychopy.main:main"
phoneme-preprocess = "phoneme_psychopy.audio_preprocess:main"

[tool.uv]
package = true
